# data-science-things

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: custom-training.txt
notebooks/: Short Url.ipynb  analyze_results.ipynb  district_chile_h3_.ipynb  gcp-kubeflow.ipynb  kubeflow-custom-pytorch-model.ipynb  kubeflow-pipeline-autom.ipynb
