[tool.poetry]
name = "data-science-research"
version = "0.1.0"
description = ""
authors = ["ecaminero"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
tensorflow = "^2.11.0"
tfx = "^1.12.0"
pandas = "^1.5.2"
h3 = "^3.7.6"
ipykernel = "^6.22.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
